crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_input_bind.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";

export const Greeter = component$(() => {
  const value = useSignal(0);
  const checked = useSignal(false);
  const stuff = useSignal();
  return (
    <>
      <input bind:value={value} />
      <input bind:checked={checked} />
      <input bind:stuff={stuff} />
      <div>{value}</div>
      <div>{value.value}</div>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _val } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _chk } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Greeter = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    const value = useSignal(0);
    const checked = useSignal(false);
    const stuff = useSignal();
    return /* @__PURE__ */ _jsxSorted(
      _Fragment,
      null,
      null,
      [
        /* @__PURE__ */ _jsxSorted(
          "input",
          null,
          {
            value: value,
            "q-e:input": inlinedQrl(_val, "_val", [value]),
          },
          null,
          3,
          null,
        ),
        /* @__PURE__ */ _jsxSorted(
          "input",
          null,
          {
            checked: checked,
            "q-e:input": inlinedQrl(_chk, "_chk", [checked]),
          },
          null,
          3,
          null,
        ),
        /* @__PURE__ */ _jsxSorted(
          "input",
          null,
          {
            "bind:stuff": stuff,
          },
          null,
          3,
          null,
        ),
        /* @__PURE__ */ _jsxSorted("div", null, null, value, 3, null),
        /* @__PURE__ */ _jsxSorted("div", null, null, _wrapProp(value), 3, null),
      ],
      3,
      "u6_0",
    );
  }, "s_n7HuG2hhU0Q"),
);

=== DIAGNOSTICS ===

[]
