crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_jsx.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, h, Fragment } from "@qwik.dev/core";

export const Lightweight = (props) => {
  return (
    <div>
      <>
        <div />
        <button {...props} />
      </>
    </div>
  );
};

export const Foo = component$(
  (props) => {
    return $(() => {
      return (
        <div>
          <>
            <div class="class" />
            <div class="class"></div>
            <div class="class">12</div>
          </>
          <div class="class">
            <Lightweight {...props} />
          </div>
          <div class="class">
            <div />
            <div />
            <div />
          </div>
          <div class="class">{children}</div>
        </div>
      );
    });
  },
  {
    tagName: "my-foo",
  },
);

=== test.js ===
import { _jsxSorted } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Lightweight = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    /* @__PURE__ */ _jsxSorted(
      _Fragment,
      null,
      null,
      [
        /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
        /* @__PURE__ */ _jsxSplit(
          "button",
          {
            ..._getVarProps(props),
          },
          _getConstProps(props),
          null,
          0,
          null,
        ),
      ],
      1,
      "u6_0",
    ),
    1,
    "u6_1",
  );
};
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_1_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_1_XXXXXXXXXXXX", [props]);
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_Foo_component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { Lightweight } from "./test";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
export const Foo_component_1_XXXXXXXXXXXX = () => {
  const props = _captures[0];
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        _Fragment,
        null,
        null,
        [
          /* @__PURE__ */ _jsxSorted(
            "div",
            null,
            {
              class: "class",
            },
            null,
            3,
            null,
          ),
          /* @__PURE__ */ _jsxSorted(
            "div",
            null,
            {
              class: "class",
            },
            null,
            3,
            null,
          ),
          /* @__PURE__ */ _jsxSorted(
            "div",
            null,
            {
              class: "class",
            },
            "12",
            3,
            null,
          ),
        ],
        3,
        "u6_2",
      ),
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        {
          class: "class",
        },
        /* @__PURE__ */ _jsxSplit(
          Lightweight,
          {
            ..._getVarProps(props),
          },
          _getConstProps(props),
          null,
          0,
          "u6_3",
        ),
        1,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        {
          class: "class",
        },
        [
          /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
          /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
          /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, null),
        ],
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        {
          class: "class",
        },
        children,
        1,
        null,
      ),
    ],
    1,
    "u6_4",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
