crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_jsx_keyed.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$((props: Stuff) => {
  return (
    <>
      <Cmp key="stuff"></Cmp>
      <Cmp></Cmp>
      <Cmp prop="23"></Cmp>
      <Cmp prop="23" key={props.stuff}></Cmp>
      <p key={props.stuff}>Hello Qwik</p>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX.js");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(Cmp, null, null, null, 3, "stuff"),
      /* @__PURE__ */ _jsxSorted(Cmp, null, null, null, 3, "u6_0"),
      /* @__PURE__ */ _jsxSorted(
        Cmp,
        null,
        {
          prop: "23",
        },
        null,
        3,
        "u6_1",
      ),
      /* @__PURE__ */ _jsxSorted(
        Cmp,
        null,
        {
          prop: "23",
        },
        null,
        3,
        props.stuff,
      ),
      /* @__PURE__ */ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff),
    ],
    1,
    "u6_2",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
