crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_lightweight_functional.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";

export const Foo = component$(
  (props) => {
    return (
      <div>
        <Button {...props} />
        <ButtonArrow {...props} />
      </div>
    );
  },
  {
    tagName: "my-foo",
  },
);

export function Button({ text, color }) {
  return (
    <button onColor$={color} onClick$={() => console.log(text, color)}>
      {text}
    </button>
  );
}

export const ButtonArrow = ({ text, color }) => {
  return (
    <button onColor$={color} onClick$={() => console.log(text, color)}>
      {text}
    </button>
  );
};

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Button_button_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_ButtonArrow_button_q_e_click_XXXXXXXXXXXX");
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);
export function Button({ text, color }) {
  return (
    <button
      q-e:color={color}
      q-e:click={
        /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Button_button_q_e_click_XXXXXXXXXXXX", [color, text])
      }
    >
      {text}
    </button>
  );
}
export const ButtonArrow = (_rawProps) => {
  return (
    <button
      q-e:color={_rawProps.color}
      q-e:click={
        /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "ButtonArrow_button_q_e_click_XXXXXXXXXXXX", [
          _rawProps,
        ])
      }
    >
      {_rawProps.text}
    </button>
  );
};

=== test.tsx_Foo_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { Button } from "./test";
import { ButtonArrow } from "./test";
export const Foo_component_XXXXXXXXXXXX = (props) => {
  return (
    <div>
      <Button {...props} />
      <ButtonArrow {...props} />
    </div>
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_Button_button_q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Button_button_q_e_click_XXXXXXXXXXXX = () => {
  const color = _captures[0],
    text = _captures[1];
  return console.log(text, color);
};

/*
{
  "origin": "test.tsx",
  "name": "Button_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Button_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Button_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "color",
    "text"
  ]
}
*/

=== test.tsx_ButtonArrow_button_q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const ButtonArrow_button_q_e_click_XXXXXXXXXXXX = () => {
  const _rawProps = _captures[0];
  return console.log(_rawProps.text, _rawProps.color);
};

/*
{
  "origin": "test.tsx",
  "name": "ButtonArrow_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ButtonArrow_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ButtonArrow_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "_rawProps"
  ]
}
*/

=== DIAGNOSTICS ===

[]
